# LicenseGuard-AI

./: .env.example  .gitignore  README.md  __init__.py  agent.py  main.py  pyproject.toml
.github/workflows/: agent-ci.yml  release-images.yml
tests/: test_agent.py  test_agent_quality.py  test_agent_smoke.py  test_integration.py  test_main_server.py
tests/agent/: test_ci_smoke.py
