[project]
name = "LicenseGuard-AI"
version = "0.1.0"
description = "An AI agent responsible for providing insights to the frontend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.121.2",
    "langchain-mcp-adapters>=0.1.13",
    "langchain-openai>=1.0.3",
    "langgraph>=1.0.3",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.6",
]

[tool.pytest.ini_options]
pythonpath = ["."]
